Controller tests added